--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "element-resize-detector": "^1.2.4",
     "github-markdown-css": "^5.2.0",
     "highlight.js": "^11.9.0",
+    "lodash": "^4.17.21",
     "marked": "^10.0.0",
     "pinia": "^2.1.7",
+    "typeit": "^8.8.7",
     "uuid": "^9.0.1",
     "vue": "^3.2.47",
     "vue-clipboard2": "^0.3.3",
